# casa-monarca-v2-1

./: .env.example  .gitignore  DESPLIEGUE_PLATAFORMA.md  Dockerfile  Makefile  PIPELINE_AUTENTICACION.md  README.md  docker-compose.yml  pipeline-diagram.html
.docker/: apache.conf
database/: migration_001.sql  migration_004_drop_usuarios_pendientes.sql  migration_005_firmas_multiples.sql  schema.sql
frontend/: dashboard.html  index.html  test-login.html  verificar.html
frontend/css/: styles.css
frontend/js/: api.js  keymanager.js
sdk/: LICENSE  README.md  pyproject.toml
sdk/src/casa_monarca_sdk/: __init__.py  cli.py  client.py  crypto.py  exceptions.py  models.py
src/: .htaccess
src/api/: bitacora-list.php  claves-descargar.php  claves-generar-token.php  claves-info.php  consulta_qr.php  documentos-archivo.php  documentos-completar-firma.php  documentos-create.php  documentos-delete.php  documentos-emitir.php  documentos-firmantes-asignar.php  documentos-firmantes-list.php  documentos-list.php  documentos-revocar.php  documentos-solicitar-firma.php  documentos-update.php  documentos-verificar.php  usuarios-cambiar-rol.php  usuarios-desactivar.php  usuarios-descargar-claves.php  usuarios-firmables.php  usuarios-list.php  usuarios-rotar-claves.php
src/auth/: login.php  logout.php  middleware.php  register.php  session.php
src/config/: db.php
src/modules/: bitacora.php  claves.php  crypto.php  documentos.php  firmantes.php  key_tokens.php  usuarios.php
tests/: __init__.py  test_client.py  test_crypto.py
