[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "casa-monarca-sdk"
version = "1.0.0"
description = "SDK modular e hiper-completo para la plataforma de firmas digitales Casa Monarca v2"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Casa Monarca Maintainers", email = "dev@casamonarca.local" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests>=2.28.0",
    "cryptography>=38.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "responses"
]

[project.scripts]
casa-monarca = "casa_monarca_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/casa_monarca_sdk"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

